# audiobook-pipeline-styletts-personal

./: .coverage  .gitattributes  .gitignore  .gitmodules  =20231117  AI_DECISION_POINTS.md  ALL_UNICODE_FIXES_COMPLETE.md  ARCHITECTURE_DECISION.md  ASR_LLAMA_INTEGRATION.md  AUDIOBOOK_DIRECTOR_PROPOSAL.md  AUTONOMOUS_PIPELINE_ROADMAP.md  AUTO_MODE_FEATURE.md  AUTO_MODE_IMPLEMENTATION_SUMMARY.md  BATCH_SUMMARY.md  BUGS_FIXED_SUMMARY.md  BUG_AUDIT_REPORT.md  CLAUDE.md  CLAUDE_CODE_SESSION_SUMMARY.md  CONCAT_ONLY_FIX.md  CRAFT_EXCELLENCE_VISION.md  DEEP_RESEARCH_PROMPT.md  DEPENDENCY_AUDIT.md  DEPENDENCY_CLEANUP_GUIDE.md  DESIGN_FIRST_REFACTOR_PLAN.md  DISK_SPACE_CRITICAL.md  DUPLICATION_BUG_FIX_SUMMARY.md  ENVIRONMENTS.md  FIXES_APPLIED.md  FOUNDATION_FIXES_2025-11-10.md  GAPS_AND_ISSUES.md  GEMINI_DEEP_RESEARCH_PROMPT.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_STATUS.md  KARAOKE_SUBTITLES_GUIDE.md  KARAOKE_TESTING.md  LEGACY_DIRECTORIES_ANALYSIS.md  LOGGING_IMPROVEMENT.md  Launch_Audiobook_Studio.bat  Launch_Studio.ps1  MASTER_GUIDE.md  (+132 more)
phase1-validation/: README.md  config.yaml  pyproject.toml  setup_phase1.ps1  setup_phase1.sh  test_classification_fix.py
phase1-validation/tests/: test_validation.py
phase2-extraction/: EXTRACTION_FIX.md  FIX_GUIDE.md  Gift of the Magi.txt  Gift_of_Magi_CLEANED.txt  IMPLEMENTATION_SUMMARY.md  INSTALL_NEMO_TN.md  QUICKSTART.md  QUICK_START.md  README.md  README_DEDUPE.md  README_NEW.md  READY_TO_TEST.md  SELF_CORRECTING_EXTRACTION_GUIDE.md  SETUP_SUMMARY.md  Systematic Theology_extracted.txt  Systematic_Theology_multipass_TTS_READY.txt  TESTING_GUIDE.md  TESTING_SUMMARY.md  TEST_SCRIPTS_README.md  TTS_GRADE_UPDATES.md  TTS_QUALITY_STANDARDS.py  TTS_READY_ACTION_PLAN.md  UPDATE_COMPLETE.md  URGENT_FIX.md  check_new_extraction.py  check_phase1.py  check_systematic_theology_status.py  cleaner_artifact_fix.txt  compare_and_normalize.py  compare_orchestrator_vs_test.py  compare_pdf_to_extracted.py  complete_fix.py  complete_fix_CORRECTED.py  config.yaml  consensus_extractor.py  debug_read_sample.py  debug_spacing.py  deep_compare.py  diagnose.py  diagnose_quality_difference.py  (+31 more)
phase2-extraction/backup/: custom_instructions.md  phases_steps.md
phase2-extraction/extracted_text/: 122839479-Alvin-Plantinga-God-and-Other-Minds.txt  122839479-Alvin-Plantinga-God-and-Other-Minds_meta.json  122839479-Alvin-Plantinga-God-and-Other-Minds_structure.json  16 Life of Pelopidas.txt  16 Life of Pelopidas_meta.json  17 life of agesilaus.txt  17 life of agesilaus_meta.json  18 life of artaxerxes.txt  18 life of artaxerxes_meta.json  21 Life of Alexander.txt  21 Life of Alexander_meta.json  25 LIFE OF DEMETRIUS .txt  27 Agis.txt  (+118 more)
phase3-chunking/: COMPLETION_FIX.md  PHASE3_FIX_IMPLEMENTATION.md  PHASE3_UPGRADE_SUMMARY.md  README.md  config.yaml  pyproject.toml  setup_phase3.ps1  test_chapter_detection.py  test_genre_aware.py  validate_chunks.py  verify_updates.ps1
phase4_tts/: DIAGNOSIS_SUMMARY.md  DROID_VOICE_GUIDE.md  PHASE4_VALIDATION_GUIDE.md  README.md  Setup-Phase4.ps1  UPGRADE_MULTI_VOICE.md  VALIDATION_QUICK_REF.md  VOICE_SELECTION_GUIDE.md  XTTS_DIAGNOSTIC_REPORT.md  __init__.py  check_xtts_api.py  config.yaml  diagnose_xtts.py  engine_registry.yaml  engine_runner.py  inspect_speakers_pth.py  list_voices.py  pyproject.toml  requirements.txt  setup.ps1  setup_windows.bat  setup_windows_admin.bat  test_builtin_speaker_fix.py  test_simple_text.py  validation_config.yaml
phase4_tts_styletts/: environment.yml  pyproject.toml
phase5_enhancement/: ARCHITECTURE_DIAGRAM.txt  CLIPPING_FIX_SUMMARY.md  COMPLETION_SUMMARY.md  INDEX.md  INTEGRATED_README.md  INTEGRATION_CHECKLIST.md  INTEGRATION_INSTRUCTIONS.py  INTEGRATION_SUMMARY.md  QUICK_REFERENCE.md  QUICK_REFERENCE.txt  QUICK_TEST.md  README.md  SESSION_SUMMARY_Nov2025.md  SINGLE_CHUNK_TEST.md  START_HERE.md  UNICODE_FIX_SUMMARY.md  apply_fix_and_test.bat  clean_audiobook_v2.py  config.backup.ori.yaml  config.yaml  config.yaml.backup  create_youtube_video.py  diagnose_clipping.py  diagnose_whisper.py  extract_phrase_timestamps.py  fix_and_test.bat  fix_config.py  generate_subtitles.py  install_integrated.bat  install_with_cleanup.bat  phrase_timestamps.txt  process_meditations.py  pyproject.toml  rerun_with_cleaning.py  strip_chunk_starts.py  strip_phrases_final.py  surgical_phrase_remover.py  test_integration.bat  tree.md  tts_progress.py  (+4 more)
phase6_orchestrator/: CHUNK_ORDER_BUG_FIX.md  COVERAGE_TEST_FIXES.md  COVERAGE_TEST_GUIDE.md  COVERAGE_TEST_RESULTS.md  CRITICAL_ISSUES_FOUND.md  EMERGENCY_FIX_README.md  EMERGENCY_FIX_V2_README.md  EMERGENCY_FIX_V3_EXPLANATION.md  FAILURE_ANALYSIS.md  FINAL_FIX_phase5.bat  GIFT_OF_MAGI_GUIDE.md  GOOD_NEWS_ANALYSIS.md  LANGUAGE_FIX_COMPLETE.md  PATH_AUDIT.md  PHASE3_FIX_CLEAN_TEXT.md  PHASE3_FIX_SUMMARY.md  PHASE3_STATUS.md  PHASE4_BUGS_FIXED.md  PHASE4_FIX.md  PHASE4_FIX_V2.md  PHASE5_FIX_EXPLANATION.md  PHASE5_TROUBLESHOOTING.md  QUICK_START.md  QUICK_TEST.md  README.md  README_START_HERE.txt  RUN_MAGI.txt  RUN_PHASE5.bat  SETUP_COMPLETE.md  STATE_MANAGER_MIGRATION.md  TROUBLESHOOTING.md  analyze_audio_quality.py  analyze_failures.bat  analyze_failures.py  analyze_phase5_failures.py  analyze_pipeline_state.py  check_chunk_paths.py  check_paths.py  check_phase3_output.py  check_phase3_python.bat  (+86 more)
phase7_batch/: BUGFIX_APPLIED.md  BUILD_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  INDEX.md  MIGRATION_GUIDE.md  QUICKSTART.md  README.md  START_HERE.md  TESTING_CHECKLIST.md  UNICODE_FIX_COMPLETE.md  config.yaml  init_venv.ps1  my_config.yaml  pyproject.toml  run_batch.bat  tree.md  verify_install.py
phase_audio_cleanup/: QUICKSTART.md  README.md  batch_scan.bat  pyproject.toml  test_cleanup.bat
pipeline_common/: README.md  WINDOWS_FIX.md  __init__.py  adapter.py  astromech_notify.py  demo.py  example_integration.py  init_venv.ps1  models.py  phase_utils.py  policy_engine.py  pyproject.toml  schema.json  schema.py  state_manager.py  test_state_manager.py  test_utils.py
ui/: README.md  __init__.py  app.py  init_venv.ps1  models.py  pyproject.toml  requirements.txt
(+1555 files in other folders)
