[project]
name = "phase1-validation"
version = "0.1.0"
description = ""
authors = [
    {name = "pdbforone",email = "pauldavidburton@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pikepdf (==9.11.0)",
    "pymupdf (==1.26.4)",
    "ebooklib (==0.19)",
    "python-docx (==1.2.0)",
    "ftfy (==6.3.1)",
    "chardet (==5.2.0)",
    "pydantic (==2.11.9)",
    "hachoir (==3.3.0)",
    "charset-normalizer (>=3.4.3,<4.0.0)"
]

[tool.poetry]
packages = [{include = "phase1_validation", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (==8.3.3)"
]

[tool.pytest.ini_options]
pythonpath = ["src"]