[tool.poetry]
name = "phase4-tts-styletts"
version = "0.1.0"
description = "Kokoro-based Phase 4 implementation for the audiobook pipeline"
authors = ["Pipeline AI <noreply@example.com>"]
packages = [{ include = "phase4_tts_styletts", from = "src" }]

[tool.poetry.dependencies]
python = "^3.10"
kokoro = ">=0.9.2"
soundfile = "^0.12.1"
numpy = "^1.26.4"
ffmpeg-python = "^0.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
