[project]
name = "phase7-batch"
version = "0.1.0"
description = "Phase 7: Batch Processing for Audiobook Pipeline - Calls Phase 6 for each file"
authors = [
    {name = "pauldavidburton@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "trio>=0.22,<0.26",
    "tqdm==4.67.1",
    "psutil>=5.9,<8.0",
    "PyYAML>=6.0,<7.0",
    "pydantic==2.11.9",
    "rich==14.1.0",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project.optional-dependencies]
dev = [
    "pytest>=8.4,<9.0",
    "pytest-mock>=3.15,<4.0",
    "pytest-cov>=7.0,<8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "--cov=phase7_batch --cov-report=term-missing"

[tool.coverage.run]
branch = true
source = ["src/"]

[project.scripts]
batch-audiobook = "phase7_batch.cli:main"
