[tool.poetry]
name = "audio-cleanup"
version = "0.1.0"
description = "Automated audio phrase detection and removal for audiobook processing"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
faster-whisper = "^1.0.0"
pydub = "^0.25.1"
pyyaml = "^6.0"
python-dateutil = "^2.8.2"
requests = "^2.32.5"

[tool.poetry.dev-dependencies]
pytest = "^7.0"
pytest-cov = "^4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
audio-cleanup = "audio_cleanup.main:main"
