[project]
name = "pipeline-common"
version = "0.1.0"
description = "Shared schema and pipeline state utilities for the audiobook pipeline."
readme = "README.md"
requires-python = ">=3.11,<3.12"
authors = [
  { name = "Audiobook Pipeline Maintainers" }
]
dependencies = [
  "pydantic>=2.11,<3.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["pipeline_common*"]
