[project]
name = "audiobook-ui"
version = "0.1.0"
description = "Personal Audiobook Studio UI"
readme = "README.md"
requires-python = ">=3.11,<3.12"
authors = [
  { name = "Audiobook Pipeline Maintainers" }
]
dependencies = [
  "gradio>=4.0.0",
  "PyYAML>=6.0",
  "psutil>=5.9",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["ui*"]

[tool.setuptools.package-data]
"ui" = ["services/*.py"]
